# mushroom

./: .gitignore  CLEANUP_VERIFICATION.md  ENHANCED_DECISION_ANALYSIS_DEPLOYMENT_GUIDE.md  FINAL_SYSTEM_SUMMARY.md  GIT_LARGE_FILES_NOTICE.md  MINIO_CLIENT_REFACTORING_SUMMARY.md  MULTIMODAL_CLIP_SYSTEM_SUMMARY.md  PROBLEM_RESOLUTION_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STRUCTURE_CLEANUP_SUMMARY.md  README.md  TASK_3_COMPLETION_SUMMARY.md  build_info.json  get_prompt.py  main.py  pyproject.toml  query_prompt.py  requirements.txt  scheduler.py  task_report_20260225_150755.md  task_report_20260225_153531.md  test_enhanced_decision_analysis.py  test_enhanced_decision_with_uv.py  test_env_integration.py  test_final_system.py  test_image_resize.py  test_llama_description_storage.py  test_minio_setup.py  test_minio_time_query.py  test_mushroom_system.py  test_optimized_system.py  update_prompt.py  verify_enhanced_deployment.py
.github/: copilot-instructions.md
.trae/documents/: Dynamic Adaptation of analyze_enhanced to Monitoring Points Config.md
docker/: .dockerignore  Dockerfile  README.md  build.sh  build_no_encrypt.sh  cache-manager.sh  deploy_server.sh  fix_redis_config.py  mushroom_llama.yaml  mushroom_solution.yml  run.sh  run.sh.md  validate_config.py
docker /: mushroom_solution.yml
docker/caddy/: Caddyfile
docker/mlflow/: start_mlflow.sh
docs/: 03_使用指南.md  05_蘑菇系统功能说明.md  06_系统优化总结.md  DOCKER_OBFUSCATION_SUCCESS_SUMMARY.md  MINIO_CLIENT_REFACTORING_SUMMARY.md  MLFLOW_GUIDE.md  README.md  README_MUSHROOM_SYSTEM.md  cache_optimization_guide.md  device_monitoring_points_reference.md  enhanced_decision_analysis_table.md  get_all_device_configs_optimization.md  iot_tables_design.md  overview_optimization.mermaid  prompt_api_integration_guide.md  scheduler_architecture.md  setpoint_monitoring_guide.md  system_architecture_flowchart.md  文档整理总结报告.md
docs/algorithms/: README.md  skill_kb_fusion_decision_algorithm.md
docs/business/: 00_系统概览.md  03_使用指南.md  README.md
docs/deployment/: 03_快速部署参考.md  DEPLOYMENT_CHECKLIST.md
docs/development/: MONITORING_POINT_EXTRACTION_COMPLETE.md  设定点监控代码分析.md
docs/guides/: 04_MinIO配置指南.md  05_蘑菇图像处理指南.md  LOG_VIEWING_GUIDE.md
docs/monitoring/: setpoint_monitoring_execution_report.md  (+1 more)
docs/reference/: 日统计可视化指南.md  (+2 more)
examples/: README.md  decision_analysis_example.py  integrated_minio_example.py  minio_example.py  mushroom_processing_example.py  prompt_api_usage_example.py
models/: README.md
notebooks/: README.md  env_params_eda.ipynb
scripts/: README.md  add_llama_description_fields.py  cache_manager.py  check_env_stats.py  compute_historical_env_stats.py  inspect_prompt_api_response.py  mushroom_cli.py  setpoint_demo.py
src/: clip_test.ipynb  main.py  main_no_scheduler.py  mushroom_encoding_example.py  mushroom_example.py  query_db.py  run_text_quality_inference.py  streamlit_app.py  test_config_fix.py
test_reports/: job_registry_test_report_20260202_200503.json
tests/: README.md  test_cache_optimization.py
(+333 files in other folders)
