[project]
name = "citic-dicastal-data-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.12",
    "loguru>=0.7.3",
    "minio>=7.2.0",
    "modelscope>=1.33.0",
    "pandas>=2.3.3",
    "pgvector>=0.4.2",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "psycopg2>=2.9.11",
    "pymysql>=1.1.2",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.42.1",
    "tenacity>=9.1.2",
    "transformers>=4.57.3",
]
[tool.uv.pip]
torch-backend = "auto"


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu129", extra = "cu129" },
]
[project.optional-dependencies]
cpu = [
    "torch>=2.9.0",
]
cu129 = [ "torch>=2.9.0",]
[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu129" },
    ],
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
[dependency-groups]
dev = [
    "notebook>=7.2.2",
    "pyarmor>=9.0.6",
]
