[project]
name = "mushroom_solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "apscheduler>=3.11.2",
    "cryptography>=43.0.0",
    "dynaconf>=3.2.12",
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "minio>=7.2.0",
    "modelscope>=1.33.0",
    "numpy>=2.1.0,<2.4.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pgvector>=0.4.2",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "psutil>=6.1.0",
    "psycopg[binary]>=3.3.2",
    "pymysql>=1.1.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "redis>=7.1.0",
    "requests>=2.32.0",
    "rich>=13.0.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.42.1",
    "streamlit>=1.52.2",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
[tool.uv.pip]
torch-backend = "auto"


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu129", extra = "cu129" },
]
[project.optional-dependencies]
cpu = [
    "torch>=2.9.0",
]
cu129 = [ "torch>=2.9.0",]
[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu129" },
    ],
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
[dependency-groups]
dev = [
    "codeenigma>=1.2.0",
    "notebook>=7.2.2",
    "pyarmor>=9.0.6",
]
